--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -31,17 +31,25 @@ select.frecuency:focus {
 input.btn.btn-lg,
 input.btn.btn-lg:focus {
     outline: none;
-    width: 60%;
     height: 60px;
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
 }
 button.btn {
-    width: 40%;
     height: 60px;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
-.promise {
+button.btn.first {
+    height: 60px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+}
+.inform {
     color: #999;
+}
+.input-code {
+    width: 100px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
